fixed some bugs

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>order-summary</title>
     </head>
     <body>
-            <img class="back-ground" src="../images/pattern-background-desktop.svg"></img>
+            <img class="back-ground" src="images/pattern-background-desktop.svg"></img>
             <div class="card">
-                <img class="hero" src="../images/illustration-hero.svg"></img>
+                <img class="hero" src="images/illustration-hero.svg"></img>
                 <div class="Summary">
                     <h1>Order Summary</h1>
                     <p>
@@ -16,7 +16,7 @@
                         device anywhere you like!
                     </p>
                     <div class="discription">
-                        <img class="icon" src="../images/icon-music.svg"></img>
+                        <img class="icon" src="images/icon-music.svg"></img>
                         <div class="Plan">Annual Plan</div>
                         <div class="Price">$59.99/year</div>
                         <div class="Change">Change</div>
